@@ -10,6 +10,7 @@ Change Log:
 - Add API functions: ms_api, get_membership_id, add_subscription (see API Docs for details)
 - Add a "Retry" function to Transaction logs to re-process a single transaction
 - Add a "Auto Matching" screen to the billings page to link M1 payments with memberships
+- Add notice when unsupported Permalink options are detected
 - Update the Authorize.Net library to latest version that uses the new API URLs
 - Improve Invitation code Add-on to accept an code via URL param &invitation_code=abc
 - Improved the details in the Pro-Rating Add-on with short instructions
